src/index.css
@import url("https://fonts.googleapis.com/css?family=Saira");

html,
body,
#root,
header {
  height: 100%;
  margin: 0;
  padding: 0;
}

body {
  font-family: "Saira", -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto",
    "Oxygen", "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
    sans-serif;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
}

code {
  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
    monospace;
}

.jumbotron {
  height: 90%;
  background-position: center;
  background-repeat: no-repeat;
  background-size: cover;
  position: relative;
  border-radius: 0;
}

.hero-text {
  font-size: 150%;
  position: absolute;
  top: 50%;
  left: 50%;
  text-align: center;
  transform: translate(-50%, -50%);
  color: white;
}

.navbar {
  left: 0;
  right: 0;
  position: fixed;
  background-color: #6e6d6d;
  font-size: 20px;
}

.footer {
  background-image: linear-gradient(
    to right,
    rgba(0, 0, 0, 0.9),
    rgba(181, 166, 127, 0.3)
  );
  padding: 50px;
  text-align: center;
}

.card {
  height: 100%;
}

.gold {
  background-color: #7d7b64;
}

.gold-text {
  color: #7d7b64;
}

a.gold-text:hover {
  color: #5e5d4d;
}

@keyframes chevron {
  from {
    opacity: 0.8;
  }
  to {
    opacity: 0;
  }
}

.fa-chevron-down {
  opacity: 0;
  position: absolute;
  font-size: 120%;
  animation-name: chevron;
  animation-duration: 2s;
  animation-iteration-count: 5;
  animation-timing-function: ease-in;
}

.border-block-left {
  border-left: 8px solid #7d7b64;
}

.duration {
  text-align: left;
}

.silver-text {
  color: #6e6d6d;
}

@media screen and (min-width: 768px) {
  .hero-text {
    left: 35%;
    text-align: left;
  }

  .navbar {
    background-color: transparent;
    transition: background-color 1s;
  }

  .silver {
    background-color: #6e6d6d;
  }

  .duration {
    text-align: right;
  }
}

